# SDL_First_Attempt

./: CMakeLists.txt
src/: Collision.cpp  Collision.h  Components.h  ECS.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  StaticGamePropertys.cpp  StaticGamePropertys.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
src/ECS/: ColliderComponent.h  Components.h  ECS.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TransformComponent.h
